--- a/src/formatButtons.scss
+++ b/src/formatButtons.scss
@@ -1,6 +1,4 @@
-@import "../variables";
-
-/* forum and comments vocs bbcode buttons attach */
+/* Forum and Vocabularies comments Textarea bbcode formatting buttons */
 body img {
   // Individual button backgrounds using map
   $button-map: (
