--- a/src/variables.scss
+++ b/src/variables.scss
@@ -23,6 +23,22 @@ $rang7: #ba81e7;
 $rang8: #9ea0ff;
 $rang9: #73c8ef;
 
+// Game type colors for background #282B2F (original colors adjusted for contrast)
+$gametype-normal: #b8b8b8;
+$gametype-quote: #B688D4;
+$gametype-sprint: #D4746E;
+$gametype-marathon: #F564A0;
+$gametype-noerror: #70A3CC;
+$gametype-noerrorcnt: #70A3CC;
+$gametype-abra: #8A9AB8;
+$gametype-abra-premium: #E6C033;
+$gametype-digits: #AAAAAA;
+$gametype-referats: #90B857;
+$gametype-voc: #7A6FD1;
+$gametype-chars: #E6912B;
+$gametype-qual: #FF5555;
+$premium-yellow: #E6C033;
+
 // top main page icons
 $topRating: url('https://i.imgur.com/coRjBrH.gif') no-repeat 0 0;
 $topToday: url('https://i.imgur.com/oAcuZP9.gif') no-repeat 0 0;
