approximately done to upload finished one

--- a/src/vocabularies.scss
+++ b/src/vocabularies.scss
@@ -1,13 +1,206 @@
 @import "variables";
 
-/* voc author bg row color */
+/* Vocabularies section styles */
+.voclist {
+  input[type="submit"] {
+    display: none !important;
+  }
+  
+  td.popularity {
+    background: none !important;
+  }
+  
+  table {
+    margin-bottom: 10px !important;
+    display: block !important;
+    
+    tbody {
+      display: block !important;
+      width: 100% !important;
+      column-count: 3 !important;
+      column-gap: 5px !important;
+      align-items: center !important;
+      
+      tr {
+        padding-left: 10px !important;
+        display: block !important;
+        -webkit-column-break-inside: avoid;
+        page-break-inside: avoid;
+        break-inside: avoid;
+        
+        &:nth-child(even) {
+          background: rgba(255, 255, 255, 0.05) !important;
+        }
+        
+        &:nth-child(odd) {
+          background: rgba(0, 0, 0, 0.3) !important;
+        }
+        
+        td {
+          &.title {
+            width: 60% !important;
+            display: inline-block !important;
+            
+            .author {
+              a {
+                color: $blue !important;
+                
+                &:hover {
+                  color: $lightblue !important;
+                }
+              }
+            }
+          }
+          
+          &.symbols,
+          &.popularity {
+            width: 18% !important;
+            display: inline-block !important;
+            margin: 0 !important;
+            padding: 0 !important;
+          }
+        }
+      }
+    }
+    
+    td {
+      border-bottom: none !important;
+    }
+    
+    .symbols {
+      strong {
+        color: $white !important;
+        font-weight: lighter !important;
+      }
+    }
+  }
+  
+  .content-col {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+  
+  .left-col {
+    position: absolute !important;
+    left: -160px !important;
+    top: 22px !important;
+    justify-content: center !important;
+    display: flex !important;
+    float: none !important;
+    width: 150px !important;
+    flex-direction: column !important;
+    margin: 0 !important;
+    padding: 25px 0 5px 0 !important;
+    
+    > h4 {
+      display: none !important;
+    }
+  }
+  
+  .remove {
+    background: #622020 $rmvoc no-repeat 5px 4px !important;
+    color: $red !important;
+    padding: 3px 25px !important;
+    border: 1px solid $red !important;
+    transition: all 0.2s !important;
+    background-size: 9px !important;
+    
+    &:hover {
+      filter: hue-rotate(60deg) !important;
+    }
+  }
+}
+
+/* Left column menu for vocs */
+.left-col {
+  ul.left-menu {
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    width: 150px !important;
+    margin: 0 !important;
+    
+    li {
+      width: 100% !important;
+      margin: 0 !important;
+      padding: 0 !important;
+      display: flex !important;
+      justify-content: center !important;
+      align-items: center !important;
+      height: 20px !important;
+      
+      &.active {
+        width: 100% !important;
+        left: 0 !important;
+        margin: 0 !important;
+        padding: 0 !important;
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
+        height: 20px !important;
+        background: $blue !important;
+        
+        span {
+          background: $blue !important;
+          margin: 0 !important;
+          padding: 0 !important;
+          color: $darkgray !important;
+        }
+      }
+      
+      a {
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
+        height: 20px !important;
+        width: 100% !important;
+        text-decoration: none !important;
+        background: $darkgray !important;
+        color: $blue !important;
+        transition: all 0.1s !important;
+        
+        &:hover {
+          background: $blue !important;
+          color: $darkgray !important;
+        }
+      }
+    }
+  }
+}
+
+/* Vocabulary view block */
+.vocview-block {
+  .words {
+    border: 1px solid $middlegray !important;
+    width: 100% !important;
+    height: 700px !important;
+  }
+  
+  #toplist {
+    dt {
+      ul.mode {
+        li.active {
+          padding: 0 !important;
+        }
+      }
+    }
+  }
+  
+  .editfor-title {
+    i {
+      background: $showHistory !important;
+    }
+  }
+}
+
+/* User content styles */
 .user-content {
   dd:nth-child(2) {
     background-color: $darkgray !important;
   }
 }
 
-/* voc play add btn */
+/* Button styles */
 .btn80 {
   background: $blue !important;
   
@@ -20,27 +213,66 @@
   background: $orange !important;
 }
 
-/* voc remove btn */
-body .voclist .remove {
-  background: #622020 $rmvoc no-repeat 5px 4px !important;
-  color: $red !important;
-  padding: 3px 25px !important;
-  border: 1px solid $red !important;
-  transition: all 0.2s !important;
-  background-size: 9px !important;
-  
-  &:hover {
-    filter: hue-rotate(60deg) !important;
-  }
-}
-
-/* voc popularity */
-body .voc_popularity {
+/* Vocabulary popularity styles */
+.voc_popularity {
   background: $vocPopularity;
 }
 
-/* voc popularity fix position */
+/* Profile block styles */
+#profile-block {
+  &.vocview-block .user-title .btn_play {
+    filter: hue-rotate(90deg) !important;
+  }
+  
+  #toplist {
+    width: 100% !important;
+    display: block !important;
+    margin: 0 !important;
+    
+    dt {
+      display: block !important;
+    }
+    
+    > dd:nth-child(2) {
+      margin: 0 !important;
+    }
+  }
+}
+
+/* Body layout styles */
 body {
+  .columns {
+    top: 20px !important;
+    
+    .content-col {
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+    }
+    
+    h3 {
+      display: none !important;
+    }
+  }
+  
+  .voclist {
+    .remove {
+      background: #622020 $rmvoc no-repeat 5px 4px !important;
+      color: $red !important;
+      padding: 3px 25px !important;
+      border: 1px solid $red !important;
+      transition: all 0.2s !important;
+      background-size: 9px !important;
+      
+      &:hover {
+        filter: hue-rotate(60deg) !important;
+      }
+    }
+  }
+  
+  .voc_popularity {
+    background: $vocPopularity;
+  }
+  
   .popularity0 {
     background-position: 0px -96px !important;
   }
@@ -72,73 +304,6 @@ body {
     
     &:hover {
       border: 1px solid $blue !important;
-    }
-  }
-}
-
-/* vocs show history button */
-.vocview-block .editfor-title i {
-  background: $showHistory !important;
-}
-
-/* play button */
-#profile-block {
-  &.vocview-block .user-title .btn_play {
-    filter: hue-rotate(90deg) !important;
-  }
-  
-  #toplist {
-    width: 100% !important;
-    display: block !important;
-    margin: 0 !important;
-    
-    dt {
-      display: block !important;
-    }
-    
-    > dd:nth-child(2) {
-      margin: 0 !important;
-    }
-  }
-}
-
-body {
-  .columns {
-    top: 20px !important;
-    
-    .content-col {
-      padding-left: 0 !important;
-      padding-right: 0 !important;
-      margin-left: 16% !important;
-      margin-right: 16% !important;
-    }
-    
-    h3 {
-      display: none !important;
-    }
-  }
-  
-  .voclist {
-    .content-col {
-      margin: 0 !important;
-      padding: 0 !important;
-    }
-    
-    .left-col {
-      position: absolute !important;
-      left: -160px !important;
-      top: 22px !important;
-      justify-content: center !important;
-      display: flex !important;
-      float: none !important;
-      width: 150px !important;
-      flex-direction: column !important;
-      margin: 0 !important;
-      padding: 25px 0 5px 0 !important;
-      
-      > h4 {
-        display: none !important;
-      }
     }
   }
 }
