--- a/src/gametypes.scss
+++ b/src/gametypes.scss
@@ -87,6 +87,32 @@ $gametype-icons: (
 }
 
 // ====================
+// GAMETYPE SIGN STYLING
+// ====================
+
+// Special styling for qualification signs
+.gametype-sign {
+  &.qual {
+    box-sizing: border-box !important;
+    height: 48px !important;
+    width: 48px !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    position: relative !important;
+    top: 0 !important;
+    left: 0 !important;
+    background: $qualificationNoneHover !important;
+    transition: background 0.2s !important;
+    z-index: 10 !important;
+    cursor: pointer !important;
+    
+    &:hover {
+      background: $qualificationHover !important;
+    }
+  }
+}
+
+// ====================
 // GAMETYPE TABLE STYLING
 // ====================
 
