--- a/src/main.scss
+++ b/src/main.scss
@@ -35,6 +35,7 @@
 @import "calendar";
 @import "notifications";
 @import "pagination";
+@import "loading";
 
 // -----------------------------------------------------------------------------
 // 6. PAGES & SECTIONS
