The English names of the bottom ranks have been removed from the usernames in the game list. NameRankColor has been added to adapt to a dark background and provide greater contrast.

--- a/src/main.scss
+++ b/src/main.scss
@@ -17,6 +17,7 @@
 // 3. BASE & RESET
 // -----------------------------------------------------------------------------
 @import "base";
+@import "nameRankColor";
 
 // -----------------------------------------------------------------------------
 // 4. LAYOUT COMPONENTS
