--- a/src/main.scss
+++ b/src/main.scss
@@ -23,6 +23,7 @@
 // 4. LAYOUT COMPONENTS
 // -----------------------------------------------------------------------------
 @import "logo";
+@import "avatar";
 @import "userPanel";
 @import "mainMenu";
 @import "recentGames";
@@ -37,6 +38,7 @@
 @import "notifications";
 @import "pagination";
 @import "loading";
+@import "popupBox";
 
 // -----------------------------------------------------------------------------
 // 6. PAGES & SECTIONS
