--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,11 +6,11 @@ $black: #000000;
 $deepgray: #1a1818;
 $darkgray: #282B2F;
 $white: #B2B2B2;
-$blue: #61839a;
-$lightblue: #7aa4c0;
+$blue: hsl(200, 20%, 50%);
+$lightblue: hsl(200, 40%, 60%);
 $red: #AA7788;
 $middlegray: #676c71;
-$orange: #aa7744;
+$orange: hsl(30, 65%, 40%);
 
 // Rank Color Variables
 $rang1: #cccccc;
