--- a/src/main.scss
+++ b/src/main.scss
@@ -45,7 +45,7 @@
 // -----------------------------------------------------------------------------
 @import "home";
 @import "login";
-@import "profile";
+@import "./profile/profile";
 @import "vocabularies";
 @import "gamelist";
 @import "gametypes";
