--- a/src/profile/_root.scss
+++ b/src/profile/_root.scss
@@ -129,7 +129,7 @@
     }
   }
 
-  // Navigation buttons for friends section
+  // Navigation buttons for friends and achievements sections
   .profile-content .nav-top {
     border-bottom: none !important;
 
