--- a/src/profile/_root.scss
+++ b/src/profile/_root.scss
@@ -137,6 +137,8 @@
       color: $blue !important;
       background-color: $darkgray !important;
       border: 1px solid $blue !important;
+      border-radius: 5px !important;
+      margin-right: 5px !important;
 
       &:hover,
       &:focus {
@@ -303,5 +305,35 @@
     position: fixed !important;
     width: 170px !important;
     top: 193px !important;
+  }
+}
+
+#content .dropdown-toggle {
+  color: $lightblue !important;
+  background-color: $deepgray !important;
+  border: 1px solid $blue !important;
+  border-radius: 5px !important;
+
+  b {
+    color: $orange !important;
+  }
+
+  span {
+    color: $white !important;
+  }
+
+  &:hover,
+  &:focus {
+    color: $deepgray !important;
+    background-color: $blue !important;
+    border: 1px solid $lightblue !important;
+
+    b {
+      color: $deepgray !important;
+    }
+
+    span {
+      color: $deepgray !important;
+    }
   }
 }
