--- a/src/profile/_stats.scss
+++ b/src/profile/_stats.scss
@@ -41,6 +41,10 @@
   }
   
   .content {
+    font-family: "Montserrat", sans-serif !important;
+    border-radius: 5px !important;
+    overflow: hidden !important;
+
     .stats-block {
       border-radius: 0 !important;
       background-color: $blue;
@@ -49,9 +53,13 @@
       
       .title {
         color: $darkgray !important;
+        font-size: 11px !important;
       }
       
       .stats-content {
+        display: flex !important;
+        align-items: center !important;
+        height: 32px !important;
         background-color: $darkgray !important;
         border: none !important;
         color: $blue !important;
@@ -59,6 +67,11 @@
         &.clickable:hover {
           background-color: $deepgray !important;
           color: $blue !important;
+        }
+
+        span {
+          margin-left: 4px !important;
+          font-size: 16px !important;
         }
       }
       
