--- a/src/gametypes.scss
+++ b/src/gametypes.scss
@@ -101,13 +101,19 @@ $gametype-icons: (
     position: relative !important;
     top: 0 !important;
     left: 0 !important;
-    background: $qualificationNoneHover !important;
+    background: transparent !important;
     transition: background 0.2s !important;
     z-index: 10 !important;
     cursor: pointer !important;
-    
-    &:hover {
-      background: $qualificationHover !important;
+
+    &::after {
+      content: "" !important;
+      position: absolute !important;
+      top: 6px !important;
+      left: 6px !important;
+      width: 100% !important;
+      height: 100% !important;
+      background: $qualificationMark !important;
     }
   }
 }
